@@ -1,10 +1,10 @@
-5d75667b7ece542dff861c2d4651543c *ChangeLog
-268923a33139b69020241c1541329805 *DESCRIPTION
+30ce82eb42f69c46c47ec7d907c932dc *ChangeLog
+c8d2f28534f07f04b0040ef1f23145da *DESCRIPTION
 15f9e3e4370454f291e533295c03ec65 *NAMESPACE
-eca4972e394e5a332beed70feadbeb0b *R/RcppExports.R
+1e18e3b98755f70ab6f34db4c40c94f4 *R/RcppExports.R
 d2ec370669d901c6cf6291dc422f1fc5 *README.md
 819f6eefcd0a9f205022812bb696e77e *cleanup
-cfcbf68f5030cc42a8a917e1ba305ced *inst/NEWS.Rd
+df0484e5f983cb1180c8606399f391c6 *inst/NEWS.Rd
 8f158ff01761776d5aa92f17b2f0f9d2 *inst/examples/A_hello_world.cpp
 7490cbe7f8cbc4635a89d4e0ecf1146e *inst/examples/B_common_subexpression.cpp
 10fa979c19c87e1d0703c7bd46d7cc0f *inst/examples/C_user_defined_functions_and_filters.cpp
@@ -42,13 +42,13 @@ f05cbe77db9b07440177710edd27facd *inst/tests/operator_subscribe_test.cpp
 af9dd1874a778a8f8037dc374d2eec51 *inst/tests/operator_subscribe_test.hpp
 cf43c62c2952c7c99a19222f62b73ef8 *inst/tests/tests.cpp
 e95055f0e34615d64a3db32a0169fb2c *inst/tests/unit_test_api.h
-8dfe6e2f64e64e4668d6e7c14af194fa *man/commonSubexpressions.Rd
-d5b2e9c446f4387ac78c4fed77ba4c66 *man/crossAlert.Rd
-aede2ed5cb8ab52f3b9c117c0a89a47b *man/helloStream.Rd
-2ad03b7d95b6448b0a32eb0d164ae5f6 *man/slidingWindow.Rd
+e69366aa575b8c54bfdbd3bde97ff9a5 *man/commonSubexpressions.Rd
+d2271065d4fb8e566f1516aba1f1806b *man/crossAlert.Rd
+dedd20ba994e873a33f25cc4719ba2d9 *man/helloStream.Rd
+cc3dc70a60181ae4a5170f364e9fa921 *man/slidingWindow.Rd
 bae12699e02a1b80b22c483a8e517572 *src/Makevars
 46c728ee6362ce5bbc472f554582467a *src/RcppExports.cpp
-a02283eb02a294b56543772275134f04 *src/common.cpp
-6918eff9c54488060ec41d6dbc4ea661 *src/hello.cpp
-1588349d8ac82596cfcdaf381f5576f9 *src/movavg.cpp
-8b873887dd6792d5c8158da43479098a *src/sliding.cpp
+ca4028d516296c356cffba4508463b2d *src/common.cpp
+3ea0d0ae2374e82c2910a55f919cf6e8 *src/hello.cpp
+c9fd2751b01e047b3904d31dff2e9455 *src/movavg.cpp
+3d2f1e49a22f3f41bb7aac15062fe180 *src/sliding.cpp
