@@ -2,14 +2,14 @@
 
 // adapted from Streamulus example 'B_common_subexpression.cpp'
 //
-// R Integration Copyright (C) 2015  Dirk Eddelbuettel 
+// R Integration Copyright (C) 2015  Dirk Eddelbuettel
 
 //  B_common_subexpression.cpp
 //
 // Streamulus Copyright (c) 2012 Irit Katriel. All rights reserved.
 //
 // This file is part of Streamulus.
-// 
+//
 // Streamulus is free software: you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
 // the Free Software Foundation, either version 3 of the License, or
@@ -19,7 +19,7 @@
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU General Public License for more details.
-// 
+//
 // You should have received a copy of the GNU General Public License
 // along with Streamulus.  If not, see <http://www.gnu.org/licenses/>.
 //
@@ -28,9 +28,9 @@
 // This is an extension of Example A where the greeting
 // we compute for every element of the stream is needed
 // in more than one expression (outdegree > 1 in the graph).
-// 
+//
 // The greeting is computed and streamed through the Stremified
-// print functor as before, but we also capture a handle to 
+// print functor as before, but we also capture a handle to
 // the output of print, which can be used in further expressions.
 //
 // The output of the program is:
@@ -49,24 +49,24 @@
 // All together now: Hello Streamulus!!
 // *******************************************************
 
-#include <streamulus.h>         // also includes Rcpp.h 
+#include <streamulus.h>         // also includes Rcpp.h
 #include <iostream>
 
 // The print functor from example A.
-struct print 
-{    
+struct print
+{
     template<class Sig> struct result;
-    
+
     template<class This,typename T>
     struct result<This(T)>
     {
-        typedef T type; 
+        typedef T type;
     };
-    
+
     template<typename T>
     typename result<print(T)>::type
     operator()(const T& value) const
-    { 
+    {
         StreamulusOut << value << std::endl;
         return value;
     }
@@ -77,33 +77,33 @@ void common_subexpressions()
     using namespace streamulus;
 
     InputStream<std::string>::type s = NewInputStream<std::string>("Input Stream", true /* verbose */);
-    
+
     // Construct a streamulus instance
-    Streamulus streamulus_engine;            
-    
+    Streamulus streamulus_engine;
+
     // Define some constants
     std::string hello("Hello ");
     std::string exc("!");
 
-    // For each element of the stream: 
+    // For each element of the stream:
     //     compute a greeting
-    //     print it 
+    //     print it
     //     emit it into the output stream
-    // 
-    // the output is assined to the 'greeting' variable, 
-    // which can be used in other streamulus expressions. 
-    // 
-    Subscription<std::string>::type greeting = 
+    //
+    // the output is assined to the 'greeting' variable,
+    // which can be used in other streamulus expressions.
+    //
+    Subscription<std::string>::type greeting =
         streamulus_engine.Subscribe(Streamify<print>(hello + s + exc));
-    
-    // Use the 'greeting' variable in other streamulus expressions. 
+
+    // Use the 'greeting' variable in other streamulus expressions.
     streamulus_engine.Subscribe(Streamify<print>(std::string("I said: ") + greeting ));
     streamulus_engine.Subscribe(Streamify<print>(std::string("All together now: ") + greeting  + exc));
-    
+
     // Insert data to the input stream
     InputStreamPut<std::string>(s, "World");
     InputStreamPut<std::string>(s, "London");
-    InputStreamPut<std::string>(s, "Streamulus");    
+    InputStreamPut<std::string>(s, "Streamulus");
 }
 
 // #if defined(USE_MAIN)
@@ -120,10 +120,12 @@ void common_subexpressions()
 //' @title Common 'greeting' carried across several expressions
 //' @return An unconditional TRUE value
 //' @author Dirk Eddelbuettel
-//' @examples commonSubexpressions()
+//' @examples
+//' \dontrun{
+//' commonSubexpressions()
+//' }
 // [[Rcpp::export]]
 bool commonSubexpressions() {
     common_subexpressions();
     return true;
 }
-
