@@ -1,3 +1,12 @@
+2019-02-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.1.3
+
+	* src/common.cpp: Wrap '\dontrun{}' around example
+	* src/movavg.cpp: Idem
+	* src/hello.cpp: Idem
+	* src/sliding.cpp: Idem
+
 2019-01-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.1.2
